修改错别字

--- a/wiki/golang/内存模型.md
+++ b/wiki/golang/内存模型.md
@@ -26,5 +26,5 @@ TODO：MSI协议，MESI协议
 
 
 
-为了保证多个goroutine程序的正确执行，防止data race，需要使用sync包、sync.atomic包、chan等同步元语。
+为了保证多个goroutine程序的正确执行，防止data race，需要使用sync包、sync.atomic包、chan等同步原语。
 
